    options if lsb_release is not available.
  * setup-commands/setup-testbed: Regenerate initramfs when adding udev rule
    for disabling ifnames (for chroots).
  * adt-buildvm-ubuntu-cloud: Drop duplicate sed of cloud-init.prerm.
  * adt-buildvm-ubuntu-cloud: Don't try to run "None" if --post-command is not
    given.
  * adt-virt-lxc: Add timeouts to all LXC operations.

 -- Martin Pitt <mpitt@debian.org>  Tue, 12 Jan 2016 12:08:47 +0100

autopkgtest (3.19.1) unstable; urgency=medium

  * adt-virt-qemu: If the executed command exits with 255, translate that to
    253 in the auxverb wrapper, as 255 is the exit code for failures of the
    auxverb itself. This avoids considering ordinary test failures as
    temporary testbed failures. This makes the QEMU runner behave the same way
    as the container ones.
  * tests/adt-run: Factorize common tests into superclasses.
  * doc/README.package-tests.rst: Point out that "Test-Command:" is also
    useful for running the same test script under different interpreters or
    different dependencies. (Closes: #809442)
  * Set summary_stream to None after closing it, to avoid trying to write
    late error messages from cleanup into it.
  * Gracefully handle failure to kill a timed out process.
  * ssh-setup/nova: Use image UUID instead of its name for "nova boot". This
    avoids failures if multiple images have the same name. (LP: #1524216)
  * adt-build-{lxc,lxd}: Run testbed setup scripts also if they are not
    executable. Thanks Antonio Terceiro! (Closes: #809917)
  * setup-commands/setup-testbed: Run apt-get autoremove when builing images.
  * setup-commands/setup-testbed: Handle options in sources.list. Thanks
    Antonio Terceiro!
  * tools/adt-build-lxd: Fix error message if apt does not have a proxy set.
  * setup-commands/setup-testbed: Install linux-headers-generic if there is no
    kernel (for containers), to make DKMS tests work when not being triggered
    by a kernel. (LP: #1531488)