@@ -17,6 +17,8 @@ autopkgtest (3.19.2) UNRELEASED; urgency=medium
   * adt-buildvm-ubuntu-cloud: Don't try to run "None" if --post-command is not
     given.
   * adt-virt-lxc: Add timeouts to all LXC operations.
+  * Fix chowning for "rw-build-tree" restriction: run it as root if available,
+    and otherwise ignore it entirely. (LP: #1535234)
 
  -- Martin Pitt <mpitt@debian.org>  Tue, 12 Jan 2016 12:08:47 +0100
 
